# netfix

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  HANDOFF.md  LICENSE  Makefile  OPEN_SOURCE.md  PRODUCT_DESIGN.md  PRODUCT_STRATEGY.md  PRODUCT_STRATEGY_V2.md  README.en.md  README.md  SECURITY.md  document.md  final.md  netfix.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  repository.yml
cases/: 2026-06-17-healthy-baseline.md  2026-06-29-普通用户代理部署体验审查.md  20260617-1405-codex-reachable-needs-key.md  INDEX.md  TEMPLATE.md
docs/: AIKB_PRODUCT_LANDING_RESEARCH_PROMPT_2026_06_29.md  CLAUDECODE_PRODUCT_MACRO_AUDIT_PROMPT_2026_06_30.md  CLAUDE_MACRO_PRODUCT_STAR_AUDIT_2026_07_01.md  CLAUDE_NEXT_PRODUCT_DEEP_AUDIT_2026_07_02.md  EULA_DRAFT.md  HANDOFF_TO_CODEX_2026_07_03.md  HANDOFF_TO_CODEX_2026_07_05_P0A_B_C_D.md  KIMI_DOMESTIC_PRODUCT_GROWTH_AUDIT_2026_07_02.md  KIMI_ORDINARY_USER_STAR_GROWTH_AUDIT_2026_07_01.md  NETFIX_BLACKBOX_LAG_AND_PROXY_UX_GOAL_2026_07_05.md  NETFIX_P1_P2_INSIGHTS_GOAL_2026_07_05.md  NEXT_DIALOGUE_START_PROMPT_PRODUCT_COLD_AUDIT_2026_06_25.md  PRIVACY_POLICY_DRAFT.md  PRODUCTIZATION_PLAN_2026_06_24.md  PRODUCT_AUDIT_AND_ROADMAP_2026_06.md  PRODUCT_MACRO_AUDIT_2026_06_30.md  PRODUCT_PLAIN_LANGUAGE_UX_AUDIT_2026_07_05.md  PRODUCT_SEED_USER_WORDS_2026_06_24.md  PROXY_DEPLOY_AUDIT_2026_06_29.md  RELEASE_CANDIDATE_SPRINT_2026_06_24.md
netfix/: __main__.py  agent_memory.py  agent_session.py  agent_tools.py  api.py  cli.py  codex.py  constants.py  dashboard_state.py  deepseek_sidecar.py  detect.py  kb.py  (+26 more)
(+158 files in other folders)
