[project]
name = "netfix"
version = "0.2.0"
description = "Offline-first network self-rescue agent for macOS developers who rely on overseas AI tools."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "qibaishi"}
]
keywords = ["network", "diagnostics", "proxy", "vpn", "codex", "macos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

[project.scripts]
netfix = "netfix.cli:main"

[project.urls]
Homepage = "https://github.com/baishiqi45-dotcom/netfix"
Repository = "https://github.com/baishiqi45-dotcom/netfix"
Issues = "https://github.com/baishiqi45-dotcom/netfix/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netfix"]
